tests/test_files_pa3/errors/UnaryOpsBad3.ic
class A
{
	
	static void main(string[] args) { }

	boolean ints(int x)
	{
		int z;
		boolean b;

		z = 
			-x;
		b = 
			-z;
		
		return b;
	}
}